subprojects {
    buildscript {
        repositories {
            mavenCentral()
        }
    }

    apply plugin: 'java-library'

    group = 'net.kremianskii.playground'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }
}
